<resources>
    <string name="app_name">Правильное питание</string>
    <string name="btnMainAct1">Завтрак</string>
    <string name="btnMainAct2">Обед</string>
    <string name="btnMainAct3">Ужин</string>
    <string name="btnZavtrakAct1"><u>ПП яичница</u></string>
    <string name="btnZavtrakAct11">zavtrak1</string>
    <string name="btnZavtrakAct12">20 грамм шпината. Моем листья, высушиваем и мелко нарезаем.
            50 грамм стручковой фасоли. Можно использовать замороженную фасоль, она чудесно сохраняет все полезные свойства.
            1 помидор. Моем и нарезаем кубиками
            2 яйца.
            Соль и перец по вкусу.</string>
    <string name="btnZavtrakAct13">Готовить это блюдо лучше всего на сковороде с антипригарным покрытием. На сковороду выкладываем кусочки помидор и немного жарим их, затем кладем шпинат и стручковую фасоль. Готовим на маленьком огне, пока овощи не станут мягкими Затем разбиваем яйца, солим и перчим.</string>
    <string name="btnZavtrakAct2"><u>ПП из лаваша и яиц</u></string>
    <string name="btnZavtrakAct21">zavtrak2</string>
    <string name="btnZavtrakAct22">армянский лаваш
            немного нежирного творожного сыра.
            3 яйца. Использовать мы будем только 1 желток и 3 белка. Взбиваем все, солим, перчим и готовим на сковороде с антипригарным покрытием.
            Любая зелень. Моем, высушиваем.
            Соль и перец по вкусу.</string>
    <string name="btnZavtrakAct23">На лист лаваша намазываем тонкий слой творожного сыра, сверху кладем омлет, посыпаем зеленью и сворачиваем в рулет.</string>
    <string name="btnZavtrakAct3"><u>ПП с вареными яйцами</u></string>
    <string name="btnZavtrakAct31">zavtrak3</string>
    <string name="btnZavtrakAct32">цельнозерновой хлеб+половинка авокадо+вареное яйцо+помидоры+зелень.</string>
    <string name="btnZavtrakAct33">В блендере взбиваем авокадо с яйцом, солим, перчим. На кусок цельнозернового хлеба намазываем наш полезный паштет, сверху кладем дольки помидоров и посыпаем зеленью.</string>
    <string name="btnZavtrakAct4"><u>ПП запеканка из творога</u></string>
    <string name="btnZavtrakAct41">zavtrak4</string>
    <string name="btnZavtrakAct42">250 грамм творога. Разумеется, выбираем творог нежирный, главное чтобы он не был кислым.
            2 столовые ложки кефира. Можно взять нежирный кефир.
            2 яйца.
            Горсть изюма и кураги. Сухофрукты моем, высушиваем, если надо режем кусочками.</string>
    <string name="btnZavtrakAct43">Смешиваем в отдельной емкости абсолютно все ингредиенты и отправляем в духовку на 30 минут. Готовую запеканку можно полить натуральным йогуртом или медом.</string>
    <string name="btnZavtrakAct5"><u>ПП сырники</u></string>
    <string name="btnZavtrakAct51">zavtrak5</string>
    <string name="btnZavtrakAct52">400 грамм нежирного творога. Лучше всего использовать творог из брикета, так как нам нужна однородная консистенция.
            5 столовых ложек муки. Можно использовать рисовую муку, тогда сырники будут воздушные.
            2 яйца.
            Любой подсластитель по вашему вкусу. Можно использовать стевию или фитпарад.
            Ванилин
            Кокосовая стружка.</string>
    <string name="btnZavtrakAct53">Смешиваем в отдельной емкости все ингредиенты кроме кокосовой стружки. Из полученной творожной массы формируем шарики и обваливаем каждый в кокосовой стружке. Отправляем в духовку на 25 минут, температура 180 градусов.</string>
    <string name="btnObedAct1"><u>Куриное суфле с отварной стручковой фасолью</u></string>
    <string name="btnObedAct11">obed1</string>
    <string name="btnObedAct12">филе птицы без кожи – 270-300 г;
яйцо сырое – 1 шт.;
фасоль замороженная стручковая – 370-400 г;
обдирная ржаная мука – 7 г.;
слив. масло – 5 г;
соль и вода.</string>
    <string name="btnObedAct13">Сварить яйцо – до твердого желтка, а мясо птицы – до готовности. Курятину прямо чистыми руками разорвать на крупные волокна. Переместить их в чашу блендера.
Добавить кубики вареного очищенного яйца.
Всыпать соль по вкусу, добавить прочие ингредиенты – масло нужно использовать мягкое, воду – около ½ ст.
Перебить все компоненты вместе до максимальной однородности.
Получившуюся массу распределить по силиконовым формам для кексов. Можно укладывать смесь плотно и до самого верха емкостей.
Запекать угощение в заранее разогретой духовке 22-25 мин. Температура – 210-220°.
Аккуратно извлечь готовые суфле из формы и перевернуть широкой частью вниз.
Закипятить в кастрюле соленую воду, высыпать в нее фасоль, предварительно ее не размораживая. Варить 7-9 мин. до мягкости.
Обдать бобовые ледяной водой, чтобы сохранить их аппетитный яркий зеленый цвет.
Подать суфле из птицы с гарниром из фасоли. По желанию можно полить угощение легким соусом из несладкого натурального йогурта и специй.</string>
    <string name="btnObedAct2"><u>Тыквенный крем-суп</u></string>
    <string name="btnObedAct21">obed2</string>
    <string name="btnObedAct22">тыквенная мякоть – 230-250 г;
морковь и картофель – по 80 г;
лук – 40-50 г;
сельдерей (листья) и семечки тыквы – по 15-20 г;
ореховое молоко – 130-150 мл;
хмели-сунули, мускатный орех и соль – по 2-3 г.</string>
    <string name="btnObedAct23">Очищенную мякоть тыквы порезать крупными кубиками.
Помельче порубить очищенную морковь и лук.
Картофель измельчить произвольными кусочками – кубиками или брусками.
Сложить все подготовленные овощи в кастрюлю с чистой подсоленной водой. Варить их до мягкости. Если времени на приготовление супа нет, можно делать овощные кусочки помельче, тогда они размягчатся быстрее.
Промыть сельдерей, порубить острым ножом. Отправить зелень к уже мягким овощам.
Добавить соль и все специи. Их состав можно менять по своему вкусу, но стоит обязательно оставить мускатный орех. Он прекрасно сочетается с тыквой и делает блюдо особенно пикантным и оригинальным.
Слить жидкость с супа в отдельную посуду. Не выливать ее в раковину, бульон еще пригодится!
Оставшуюся гущу перебить погружным блендером или размять толкушкой.
Добавить ореховое молоко. Разбавить суп бульоном до желаемой консистенции. Он не должен получиться слишком жидким. Досолить при необходимости.
Разлить готовое блюдо по тарелкам и обязательно посыпать каждую порцию семечками.
Чтобы тыквенное семя стало еще более полезным, стоит заранее замочить его в чистой воде на 2,5-3 ч. Если не удалось отыскать в продаже орехового молока, можно заменить его привычными нежирными сливками.</string>
    <string name="btnObedAct3"><u>Паста с овощами и креветками</u></string>
    <string name="btnObedAct31">obed3</string>
    <string name="btnObedAct32">очищенные крупные креветки – 130-150 г;
кабачок – 270-300 г;
спагетти – 270-300 г;
сладкий перец и лук – по 80 г;
перебитые блендером томаты – 60-70 г;
сыр, чеснок, соль, прованские травы.</string>
    <string name="btnObedAct33">Лук очень мелко порубить. Перец и кабачок произвольно порезать. Отправить на сковородку с минимальным количеством масла. Готовить до мягкости.
Добавить массу из помидоров и креветки. Чтобы ускорить процесс, можно взять готовый кетчуп или томатную пасту в таком же количестве. Лучше выбирать домашние продукты, а не магазинные.
Добавить тертый чесок, соль и прованские травки.
Тушить смесь вместе 7-8 минут.
Отварить спагетти до полной готовности.
Соединить в сковородке массу с овощами и креветками и макаронные изделия. Хорошо перемешать.
Сверху засыпать угощение небольшим количеством сырной стружки. Лучше всего использовать пармезан.
В подливку из овощей и креветок по такому рецепту вкусно также добавлять консервированный зеленый горошек и/или сладкие кукурузные зерна.</string>
    <string name="btnObedAct4"><u>Вегетарианское ризотто</u></string>
    <string name="btnObedAct41">obed4</string>
    <string name="btnObedAct42">рис, зеленый горошек и стручковая фасоль – по 90-100 г;
лук, сладкий красный или желтый перец, томаты – по 70-80 г;
чеснок, соль, прованские травы, масло оливы.</string>
    <string name="btnObedAct43">Лук, перец, помидоры и перец произвольно измельчить. Не стоит делать кусочки слишком крупными.
Готовить их до размягчения на сковородки с разогретым маслом оливы.
В конце всыпать горошек и стручковую фасоль. Если они замороженные, дать продуктам предварительно слегка растаять. Добавить мелкие кусочки чеснока.
Готовить ингредиенты вместе еще 7-8 мин.
Сверху прямо в сковороду высыпать невареный, но заранее промытый до прозрачной воды рис.
Залить ингредиенты соленой водой или овощным бульоном так, чтобы жидкость полностью покрыла все продукты. Сразу добавить специи.
Закрыть емкость крышки и томить угощение до готовности крупы. Если понадобится еще жидкость, можно смело подливать ее прямо в процессе.
Такой обед вкусно дополнит тарелка с ассорти из свежих овощей и зелени.</string>
    <string name="btnObedAct5"><u>Рыбные котлеты с гриль-овощами</u></string>
    <string name="btnObedAct51">obed5</string>
    <string name="btnObedAct52">филе трески без костей – 470-500 г;
рисовые хлопья – 80-100 г;
лук – 1 головка;
овощи для гриля – 670-700 г;
соевый соус – 80 мл;
соль и смесь специй для рыбы.</string>
    <string name="btnObedAct53">Филе порезать мелкими кусочками. Также порубить лук. Отправить оба ингредиента в чашу блендера. Перебить до максимальной однородности.
Рисовые хлопья залить только что вскипевшей водой (в небольшом количестве). Дать настояться и набухнуть. Затем – слить лишнюю жидкость и остудить массу.
Хорошо перемешать подготовленные продукты. Добавить оставшиеся ингредиенты из рецепта.
Сформировать небольшие аккуратные котлеты.
Отправить их готовиться на пару или в духовке на специальном силиконовом коврике без масла.
Выбранные овощи (например, морковь, кабачок, сладкий перец, лук) порезать крупными кусочками. Залить соевым соусом, аккуратно перемешать. Оставить на 17-20 минут. Обжарить все кусочки на сковороде-гриль без масла.
Подать котлеты с овощным гарниром. Вкусно приготовленный ПП-обед вполне может понравиться не только худеющим, но и всем остальным членам семьи. Особенно если выбирать для него самые интересные оригинальные рецепты.</string>
    <string name="btnYzinAct1"><u>ТВОРОЖНАЯ ПП-ЗАПЕКАНКА</u></string>
    <string name="btnYzinAct11">uzin1</string>
    <string name="btnYzinAct12">творог обезжиренный – 400 г;
куриное филе – 400 г;
луковица – 1 штука;
красный перец – 1 штука;
яйца – 2 штуки;
зелень, соль, перец – по вкусу;</string>
    <string name="btnYzinAct13">Куриное филе необходимо нарезать кубиками и обжарить на сковороде, а творог взбить в блендере до получения однородной массы. Лук следует мелко нашинковать и добавить на сковороду к практически готовой курице, посолить и поперчить. К творожной массе нужно добавить яйцо и специи, а затем тщательно взбить. В форму вылить половину творожного теста, сверху положить куриную начинку и покрыть оставшейся частью смеси. Сверху посыпать мелко нарезанным перцем и зеленью. Запеканку следует выпекать в духовке в течение 45 минут при температуре 1800 С.

С такой запеканкой для ужина на правильном питании можно не волноваться о фигуре и быть уверенным в ее полезности, а также забыть о чувстве вечернего голода.</string>
    <string name="btnYzinAct2"><u>САЛАТ С ТУНЦОМ</u></string>
    <string name="btnYzinAct21">uzin2</string>
    <string name="btnYzinAct22">тунец в собственном соку – 100 г;
листья салата – 150 г;
огурец свежий – 1 штука;
яйцо – 1 штука;
йогурт натуральный – 50 мл;
горчица дижонская – 0,5 чайной ложки;
соль, перец – по вкусу;</string>
    <string name="btnYzinAct3"><u>КУРИНОЕ ПП-СУФЛЕ</u></string>
    <string name="btnYzinAct4"><u>РАГУ С НЕЖИРНЫМ МЯСОМ В МУЛЬТИВАРКЕ</u></string>
    <string name="btnYzinAct5"><u>ДИЕТИЧЕСКИЙ САЛАТ ЦЕЗАРЬ С КРЕВЕТКАМИ</u></string>
    <string name="btnOpisBlAct1"><u>Ингредиенты:</u></string>
    <string name="btnOpisBlAct2"><u>Приготовление:</u></string>
</resources>