<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textTitleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_margin="15dp"
        android:gravity="center"
        android:layout_gravity="top"
        android:textSize="36sp"
        android:textColor="@color/btn_text_color"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_below="@+id/textTitleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:onClick="btnMainActOnClick1"
            android:padding="10dp"
            android:text="@string/btnMainAct1"
            android:textColor="@color/btn_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:onClick="btnMainActOnClick2"
            android:padding="10dp"
            android:text="@string/btnMainAct2"
            android:textColor="@color/btn_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:onClick="btnMainActOnClick3"
            android:padding="10dp"
            android:text="@string/btnMainAct3"
            android:textColor="@color/btn_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>