<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UzinActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textTitleZavtrak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMainAct3"
        android:background="@drawable/btn"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/btn_text_color"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_below="@+id/textTitleZavtrak"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/tochka"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="btnUzinActOnClick1"
                android:text="@string/btnYzinAct1"
                android:textColor="@color/btn_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginLeft="20dp"
            android:layout_marginVertical="15dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/tochka"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="btnUzinActOnClick2"
                android:text="@string/btnYzinAct2"
                android:textColor="@color/btn_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginLeft="20dp"
            android:layout_marginVertical="15dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/tochka"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="btnUzinActOnClick3"
                android:text="@string/btnYzinAct3"
                android:textColor="@color/btn_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginLeft="20dp"
            android:layout_marginVertical="15dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/tochka"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="btnUzinActOnClick4"
                android:text="@string/btnYzinAct4"
                android:textColor="@color/btn_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginLeft="20dp"
            android:layout_marginVertical="15dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/tochka"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:onClick="btnUzinActOnClick5"
                android:text="@string/btnYzinAct5"
                android:textColor="@color/btn_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>