<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpisanieBludaActivity"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linerTitleOpisBluda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/tochka"/>

        <TextView
            android:id="@+id/textTitleOpisBlu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnZavtrakAct1"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/btn_text_color"
            android:textStyle="bold"
            />
    </LinearLayout>
    <ScrollView
        android:layout_below="@+id/linerTitleOpisBluda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewOpis"
                android:layout_marginTop="30dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOpisBlAct1"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="50dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/btn_text_color"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textTitleOpisBlu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOpisBlAct1"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/btn_text_color"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOpisBlAct2"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="50dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/btn_text_color"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textTitleOpisBlu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOpisBlAct1"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/btn_text_color"
                android:textStyle="bold"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>